--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 customtkinter~=5.2.2
-requests~=2.32.4
-pillow~=11.1.0
+requests~=2.32.5
+pillow~=11.3.0
+
+# last succesfully tested on Python 3.13.7
